--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,34 @@ android {
 dependencies {
     def room_version = "2.4.2"
     def nav_version = "2.4.1"
+
+    def moshi_version = '1.10.0'
+    def okhttp_version = '4.9.0'
+    def okhttp_logging_iterceptor_version = '3.12.1'
+    def retrofit_moshi_converter_version = '2.9.0'
+    def retrofit_version = '2.9.0'
+
+    def coroutines_adapter_version = '0.9.2'
+    def coroutines_version = '1.3.7'
+
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // Networking
+    implementation "com.squareup.okhttp3:okhttp-bom:$okhttp_version"
+    implementation("com.squareup.okhttp3:logging-interceptor")
+    implementation("com.squareup.okhttp3:okhttp")
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
+
+    // Moshi for json serialization / deserialization
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_moshi_converter_version"
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
+    implementation "com.squareup.moshi:moshi-adapters:$moshi_version"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$coroutines_adapter_version"
 
     implementation("androidx.navigation:navigation-compose:$nav_version")
     implementation 'androidx.core:core-ktx:1.7.0'
