--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
 
 android {
     compileSdk 32
+    flavorDimensions "default"
 
     defaultConfig {
         applicationId "com.example.myapplication"
@@ -43,6 +44,17 @@ android {
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
+    productFlavors {
+        staging {
+            buildConfigField 'String', 'API_KEY', '"1234"'
+            buildConfigField 'String', 'MARVEL_APIS_ENDPOINT', '"https://gateway.marvel.com:443/"'
+        }
+
+        prod {
+            buildConfigField 'String', 'API_KEY', '"1234"'
+            buildConfigField 'String', 'MARVEL_APIS_ENDPOINT', '"https://gateway.marvel.com:443/"'
         }
     }
 }
