--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     def room_version = "2.4.2"
     def nav_version = "2.4.1"
 
