--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'com.google.dagger:hilt-android:2.39.1'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation("io.coil-kt:coil-compose:2.0.0")
     kapt "com.google.dagger:hilt-compiler:2.39.1"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 }
